--- a/agileProject/pom.xml
+++ b/agileProject/pom.xml
@@ -25,5 +25,15 @@
 			<artifactId>cucumber-picocontainer</artifactId>
 			<version>5.4.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.1.6.Final</version>
+		</dependency>
+
 	</dependencies>
+
+
 </project>
